[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SF_plum_finder"
version = "1.0.3"
authors = [
  { name="Zaven Cook", email="zavencook@gmail.com" },
]
description = "Find the closest plum in San Francisco"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "googlemaps==4.6.0",
    "numpy==1.23.3",
    "pandas==1.4.4"
]


[project.urls]
"Homepage" = "https://github.com/zcook7904/plum_finder"
"Bug Tracker" = "https://github.com/zcook7904/plum_finder/issues"

[tool.hatch.build]
exclude = [
    "venv",
    "keys.txt",
    "*/__pycache__",
    "/.idea"
]