[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SF_plum_finder"
version = "1.0.3"
authors = [
  { name="Zaven Cook", email="zavencook@gmail.com" },
]
description = "Find the closest plum in San Francisco"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "googlemaps",
    "numpy",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/zcook7904/plum_finder"
"Bug Tracker" = "https://github.com/zcook7904/plum_finder/issues"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
exclude = ["venv", "keys.txt"]

[tool.setuptools.package-data]
"SF_plum_finder.data" = ["*.csv", "*.json"]

